{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 241,
  "lineage": "ebb00948-11ef-e397-d7ab-070a37d8bab5",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:security-group/sg-006c8611c5777a291",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-006c8611c5777a291",
            "ingress": [],
            "name": "eks-lon-managed-node-cluster-2024012623512818050000000c",
            "name_prefix": "eks-lon-managed-node-cluster-",
            "owner_id": "517716713836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-lon-managed-node-cluster",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "eks-lon-managed-node-cluster",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:security-group/sg-041ffd2c10245b752",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-041ffd2c10245b752",
            "ingress": [],
            "name": "eks-lon-managed-node-node-2024012623512825110000000d",
            "name_prefix": "eks-lon-managed-node-node-",
            "owner_id": "517716713836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-lon-managed-node-node",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "owned"
            },
            "tags_all": {
              "Name": "eks-lon-managed-node-node",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1103291961",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006c8611c5777a291",
            "security_group_rule_id": "sgr-02e9ba01889fa4465",
            "self": false,
            "source_security_group_id": "sg-041ffd2c10245b752",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3858630694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-041ffd2c10245b752",
            "security_group_rule_id": "sgr-0ec693800844b4c0a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2434591531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-041ffd2c10245b752",
            "security_group_rule_id": "sgr-0634cf0b7e406366b",
            "self": false,
            "source_security_group_id": "sg-006c8611c5777a291",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2332485283",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-041ffd2c10245b752",
            "security_group_rule_id": "sgr-0d598386c0b089ed5",
            "self": false,
            "source_security_group_id": "sg-006c8611c5777a291",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1360575764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-041ffd2c10245b752",
            "security_group_rule_id": "sgr-0b3827e45e40d00cd",
            "self": false,
            "source_security_group_id": "sg-006c8611c5777a291",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-901353183",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-041ffd2c10245b752",
            "security_group_rule_id": "sgr-0bcfc16a48c8db04f",
            "self": false,
            "source_security_group_id": "sg-006c8611c5777a291",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3180021193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-041ffd2c10245b752",
            "security_group_rule_id": "sgr-03f153ddaf90e0f56",
            "self": false,
            "source_security_group_id": "sg-006c8611c5777a291",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2817317979",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-041ffd2c10245b752",
            "security_group_rule_id": "sgr-06332114720ae5d3f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1629807093",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-041ffd2c10245b752",
            "security_group_rule_id": "sgr-09618e1b36832a7ec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3313189402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-041ffd2c10245b752",
            "security_group_rule_id": "sgr-0dd6489a693bc7e29",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00404ea8eea4403e6",
            "domain": "vpc",
            "id": "eipalloc-00404ea8eea4403e6",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-135-221-193.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.221.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "managed-containers-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "managed-containers-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:internet-gateway/igw-0052272adeeaa7101",
            "id": "igw-0052272adeeaa7101",
            "owner_id": "517716713836",
            "tags": {
              "Name": "managed-containers",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "managed-containers",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00404ea8eea4403e6",
            "connectivity_type": "public",
            "id": "nat-0b4b9b83db4498137",
            "network_interface_id": "eni-0da11dc3cd07cab7e",
            "private_ip": "10.0.4.73",
            "public_ip": "18.135.221.193",
            "subnet_id": "subnet-019375e1855bcacce",
            "tags": {
              "Name": "managed-containers-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "managed-containers-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055e6e5df36b7fe5e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b4b9b83db4498137",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055e6e5df36b7fe5e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0052272adeeaa7101",
            "id": "r-rtb-0c79d9595e8bd1ee11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c79d9595e8bd1ee1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:route-table/rtb-055e6e5df36b7fe5e",
            "id": "rtb-055e6e5df36b7fe5e",
            "owner_id": "517716713836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "managed-containers-private",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "managed-containers-private",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:route-table/rtb-0c79d9595e8bd1ee1",
            "id": "rtb-0c79d9595e8bd1ee1",
            "owner_id": "517716713836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "managed-containers-public",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "managed-containers-public",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095cfe11f0b99a456",
            "route_table_id": "rtb-055e6e5df36b7fe5e",
            "subnet_id": "subnet-056cf1c2aed6905b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d15c8785e9f517c",
            "route_table_id": "rtb-055e6e5df36b7fe5e",
            "subnet_id": "subnet-02c83258c8a11c073"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f9a05a9bc01a62f",
            "route_table_id": "rtb-055e6e5df36b7fe5e",
            "subnet_id": "subnet-0c1071b78889e0cb9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cb3e8a26a9652e7",
            "route_table_id": "rtb-0c79d9595e8bd1ee1",
            "subnet_id": "subnet-019375e1855bcacce"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9ce0c990449868e",
            "route_table_id": "rtb-0c79d9595e8bd1ee1",
            "subnet_id": "subnet-0c4ef71e6594be9ae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03343993ec8b787a4",
            "route_table_id": "rtb-0c79d9595e8bd1ee1",
            "subnet_id": "subnet-0e811e80191ab0402"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-056cf1c2aed6905b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056cf1c2aed6905b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "managed-containers-private-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "managed-containers-private-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-02c83258c8a11c073",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c83258c8a11c073",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "managed-containers-private-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "managed-containers-private-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-0c1071b78889e0cb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1071b78889e0cb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "managed-containers-private-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "managed-containers-private-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-019375e1855bcacce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019375e1855bcacce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "managed-containers-public-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "managed-containers-public-eu-west-2a",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-0c4ef71e6594be9ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4ef71e6594be9ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "managed-containers-public-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "managed-containers-public-eu-west-2b",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:subnet/subnet-0e811e80191ab0402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e811e80191ab0402",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517716713836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "managed-containers-public-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "managed-containers-public-eu-west-2c",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon",
              "kubernetes.io/cluster/eks-lon-managed-node": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-008a383b09ae81f0e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:517716713836:vpc/vpc-008a383b09ae81f0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef508bbf5b3f1c1b",
            "default_route_table_id": "rtb-0674789600391b048",
            "default_security_group_id": "sg-04235f75657c0196d",
            "dhcp_options_id": "dopt-2c35c445",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008a383b09ae81f0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0674789600391b048",
            "owner_id": "517716713836",
            "tags": {
              "Name": "managed-containers",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            },
            "tags_all": {
              "Name": "managed-containers",
              "cstag-accounting": "dev",
              "cstag-business": "Sales",
              "cstag-department": "Sales - 310000",
              "cstag-owner": "njoshi02",
              "cstag-product": "Falcon"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}